syntax = "proto3";

package com.xtdb.protos;

import "transactions.proto";
import "entity.proto";
import "common.proto";


message StatusResponse {
  string version = 1;
  int32 index_version = 2;
  string kv_store = 3;
  int32 estimate_num_keys = 4;
  int64 size = 5;
  OptionString revision = 6;
  OptionString consumer_state = 7;
}

service GrpcApi {
  rpc Status(Empty) returns (StatusResponse);
  rpc SubmitTx(com.xtdb.protos.SubmitRequest)
      returns (com.xtdb.protos.SubmitResponse);
  rpc SpeculativeTx(com.xtdb.protos.SpeculativeTxRequest)
      returns (com.xtdb.protos.SpeculativeTxResponse);
  rpc EntityTx(com.xtdb.protos.EntityRequest)
      returns (com.xtdb.protos.EntityTxResponse);
  rpc Entity(com.xtdb.protos.EntityRequest)
      returns (com.xtdb.protos.EntityResponse);
}
